--- a/custom_components/room_ventilation_advisor/translations/en.json
+++ b/custom_components/room_ventilation_advisor/translations/en.json
@@ -1,1 +1,180 @@
-{}
+{
+    "config": {
+        "step": {
+            "user": {
+                "title": "Room Ventilation Advisor Setup",
+                "description": "Configure outdoor sensors and basic settings.",
+                "data": {
+                    "name": "Integration Name",
+                    "outdoor_temp_sensor": "Outdoor Temperature Sensor",
+                    "outdoor_humidity_sensor": "Outdoor Humidity Sensor",
+                    "wind_sensor": "Wind Speed Sensor",
+                    "scan_interval": "Update Interval (seconds)"
+                }
+            },
+            "room_setup": {
+                "title": "Room Configuration",
+                "description": "Configure sensors for each room. You can add up to 20 rooms.",
+                "data": {
+                    "room_name": "Room Name",
+                    "temp_sensor": "Indoor Temperature Sensor",
+                    "humidity_sensor": "Indoor Humidity Sensor",
+                    "room_type": "Room Type",
+                    "co2_sensor": "CO2 Sensor (optional)",
+                    "enabled": "Enable Room",
+                    "add_another_room": "Add Another Room"
+                },
+                "data_description": {
+                    "rooms_configured": "Rooms configured: {rooms_configured}"
+                }
+            }
+        },
+        "error": {
+            "cannot_connect": "Failed to connect",
+            "invalid_auth": "Invalid authentication",
+            "unknown": "Unexpected error"
+        },
+        "abort": {
+            "already_configured": "Device is already configured"
+        }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "title": "Room Ventilation Advisor Options",
+                "description": "Configure additional options.",
+                "data": {
+                    "configure_basic": "Configure Basic Settings",
+                    "configure_rooms": "Configure Room Management",
+                    "configure_advanced": "Configure Advanced Settings"
+                },
+                "data_description": {
+                    "basic_desc": "Configure scan interval, wind factor, and room settings",
+                    "rooms_desc": "Add, remove, or modify room configurations",
+                    "advanced_desc": "Configure advanced ventilation calculation parameters"
+                }
+            },
+            "basic": {
+                "title": "Basic Settings",
+                "description": "Configure basic ventilation settings.",
+                "data": {
+                    "scan_interval": "Update Interval (seconds)",
+                    "enable_wind_factor": "Enable Wind Factor",
+                    "outdoor_temp_sensor": "Outdoor Temperature Sensor",
+                    "outdoor_humidity_sensor": "Outdoor Humidity Sensor",
+                    "wind_sensor": "Wind Speed Sensor"
+                }
+            },
+            "rooms": {
+                "title": "Room Management",
+                "description": "Manage room configurations for ventilation monitoring.",
+                "data": {
+                    "add_room": "Add New Room",
+                    "edit_room": "Edit Existing Room",
+                    "room_to_edit": "Select Room to Edit",
+                    "remove_room": "Remove Room",
+                    "room_to_remove": "Select Room to Remove"
+                },
+                "data_description": {
+                    "current_rooms": "Currently configured rooms: {current_rooms}",
+                    "max_rooms": "Maximum rooms allowed: {max_rooms}"
+                }
+            },
+            "add_room": {
+                "title": "Add New Room",
+                "description": "Configure a new room for ventilation monitoring.",
+                "data": {
+                    "room_name": "Room Name",
+                    "temp_sensor": "Temperature Sensor",
+                    "humidity_sensor": "Humidity Sensor",
+                    "room_type": "Room Type",
+                    "co2_sensor": "CO2 Sensor (optional)",
+                    "enabled": "Enable Room"
+                }
+            },
+            "edit_room": {
+                "title": "Edit Room",
+                "description": "Modify configuration for room: {room_name}",
+                "data": {
+                    "temp_sensor": "Temperature Sensor",
+                    "humidity_sensor": "Humidity Sensor",
+                    "room_type": "Room Type",
+                    "co2_sensor": "CO2 Sensor (optional)",
+                    "enabled": "Enable Room"
+                }
+            },
+            "remove_room": {
+                "title": "Remove Room",
+                "description": "Remove room '{room_name}' from ventilation monitoring.",
+                "data": {
+                    "confirm_remove": "Confirm Removal"
+                }
+            },
+            "advanced": {
+                "title": "Advanced Ventilation Settings",
+                "description": "Configure advanced ventilation calculation parameters.",
+                "data": {
+                    "temperature_thresholds": "Temperature Thresholds",
+                    "temperature_winter_good": "Winter - good threshold (°C)",
+                    "temperature_winter_moderate": "Winter - moderate threshold (°C)",
+                    "temperature_summer_good": "Summer - good threshold (°C)",
+                    "temperature_summer_moderate": "Summer - moderate threshold (°C)",
+                    "temperature_default_good": "Default - good threshold (°C)",
+                    "temperature_default_moderate": "Default - moderate threshold (°C)",
+                    "humidity_thresholds": "Humidity Thresholds",
+                    "humidity_good": "Humidity - good threshold (g/m³)",
+                    "humidity_moderate": "Humidity - moderate threshold (g/m³)",
+                    "co2_thresholds": "CO2 Thresholds",
+                    "co2_very_poor": "CO2 - very poor (ppm)",
+                    "co2_poor": "CO2 - poor (ppm)",
+                    "co2_moderate": "CO2 - moderate (ppm)",
+                    "wind_thresholds": "Wind Thresholds",
+                    "wind_no_effect": "Wind - no effect threshold (m/s)",
+                    "wind_moderate_effect": "Wind - moderate effect threshold (m/s)",
+                    "score_weights": "Score Weights",
+                    "weight_temperature": "Weight: Temperature",
+                    "weight_humidity": "Weight: Humidity",
+                    "weight_co2": "Weight: CO2",
+                    "weight_time": "Weight: Time of day",
+                    "time_factors": "Time Factors"
+                },
+                "data_description": {
+                    "temperature_thresholds": "Adjust temperature difference thresholds for different seasons",
+                    "temperature_winter_good": "Threshold for classifying temperature difference as 'good' in winter",
+                    "temperature_winter_moderate": "Threshold for classifying temperature difference as 'moderate' in winter",
+                    "temperature_summer_good": "Threshold for classifying temperature difference as 'good' in summer",
+                    "temperature_summer_moderate": "Threshold for classifying temperature difference as 'moderate' in summer",
+                    "temperature_default_good": "Default good threshold used when season-specific values are not set",
+                    "temperature_default_moderate": "Default moderate threshold used when season-specific values are not set",
+                    "humidity_thresholds": "Configure absolute humidity difference thresholds",
+                    "humidity_good": "Threshold for good absolute humidity difference",
+                    "humidity_moderate": "Threshold for moderate absolute humidity difference",
+                    "co2_thresholds": "Set CO2 level thresholds for air quality assessment",
+                    "co2_very_poor": "Threshold above which ventilation is considered very poor",
+                    "co2_poor": "Threshold above which ventilation is considered poor",
+                    "co2_moderate": "Threshold above which ventilation is considered moderate",
+                    "wind_thresholds": "Configure wind speed effects on ventilation",
+                    "wind_no_effect": "Wind speed below which there is no measurable effect",
+                    "wind_moderate_effect": "Wind speed above which moderate effect is assumed",
+                    "score_weights": "Adjust the relative importance of different factors",
+                    "weight_temperature": "Relative weight applied to the temperature component of the score",
+                    "weight_humidity": "Relative weight applied to the humidity component of the score",
+                    "weight_co2": "Relative weight applied to the CO2 component of the score",
+                    "weight_time": "Relative weight applied to the time-of-day component",
+                    "time_factors": "Configure time-based ventilation patterns"
+                }
+            }
+        }
+    },
+    "selector": {
+        "room_type": {
+            "options": {
+                "living_room": "Living Room",
+                "bedroom": "Bedroom",
+                "bathroom": "Bathroom",
+                "kitchen": "Kitchen",
+                "office": "Office"
+            }
+        }
+    }
+}
